--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,31 +1,6 @@
-* {
-  font-family: 'PT Sans', sans-serif;
-}
-
-header {
-  display: flex;
-  justify-content: center;
-  padding: 22.5px 0;
-}
-
-header * {
-  display: inline-block;
-}
-
-footer {
-  font-size: 12px;
-  background-color: #222222;
-  padding: 9px;
-  text-align: center;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-footer a {
-  color: #41aade !important;
-}
-
-main .display {
-  color: red;
+body {
+  cursor: pointer;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
 }
