--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,11 @@
 body {
-  cursor: pointer;
+  background: black;
   margin: 0;
-  overflow: hidden;
   padding: 0;
+  overflow: hidden;
+}
+
+* {
+  width: 100vw;
+  height: 100vh;
 }
